# quora

./: Dockerfile  README.md  docker-compose.yml  heroku.yml  pyproject.toml
quora/: pytest.ini
quora/core/: utils.py  views.py
quora/frontend/: package-lock.json  package.json  vue.config.js  webpack-stats.json
quora/frontend/src/: App.vue
quora/frontend/src/common/: api.service.js  csrf_token.js
quora/frontend/src/components/: Answer.vue  Navbar.vue  NotFound.vue  QuestionActions.vue
quora/frontend/src/router/: index.js
quora/frontend/src/views/: AnswerEditor.vue  Home.vue  Question.vue  QuestionEditor.vue
quora/profiles/: admin.py  forms.py  models.py
quora/profiles/api/: serializers.py  urls.py  views.py
quora/profiles/migrations/: 0001_initial.py
quora/profiles/test/: test_profiles.py
quora/questions/: models.py  signals.py
quora/questions/api/: permissions.py  serializers.py  urls.py  views.py
quora/questions/migrations/: 0001_initial.py  0002_auto_20200210_1235.py
quora/questions/test/: tests_questions.py
quora/quora/: settings.py  urls.py
quora/templates/: auth_layout.html  base.html  index.html  index_dev.html
quora/templates/django_registration/: registration_form.html
quora/templates/registration/: login.html
